[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "CLI tool to convert PDF files to Markdown"
requires-python = ">=3.9"
dependencies = [
    "PyMuPDF",
    "pytesseract",
    "pdf2image",
    "Pillow",
    "click",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.setuptools.packages.find]
where = ["."]
